--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,3 +3,8 @@
 @import "./util/mixins";
 @import "./global/scaffolding";
 @import "./generated/sprite-svg";
+@import "./blocks/text";
+@import "./blocks/header";
+@import "./blocks/catalog";
+@import "./blocks/info";
+@import "./blocks/contacts";
