--- a/src/templates/data/data.njk
+++ b/src/templates/data/data.njk
@@ -1,10 +1,13 @@
 {% set
 contacts = [
   {
-    telephone: '+38 067 248 09 30'
+    telephone: '+38 067 248 09 30',
+    email: 'chornomazv@ulf.com.ua'
   }, {
-    telephone: '+38 067 502 81 94'
+    telephone: '+38 067 502 81 94',
+    email: 'novikovai@ulf.com.ua'
   }, {
-    telephone: '+38 044 393 40 93'
+    telephone: '+38 044 393 40 93',
+    email: 'secretar@ukrlandfarming.com.ua'
   }
 ] %}
