--- a/src/scss/global/_scaffolding.scss
+++ b/src/scss/global/_scaffolding.scss
@@ -11,6 +11,7 @@ body {
   padding: 0;
   line-height: 1.2;
   font-family: Verdana, Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 img,
