--- a/src/scss/blocks/_info.scss
+++ b/src/scss/blocks/_info.scss
@@ -40,7 +40,7 @@
   &__link {
     display: block;
     margin: 34px 0 28px;
-    color: rgb(0, 0, 0);
+    color: red;
     font-family: Verdana;
     font-size: 16px;
     font-weight: 700;
