--- a/src/templates/partials/_header.njk
+++ b/src/templates/partials/_header.njk
@@ -1,7 +1,10 @@
 <header class="header">
   <div class="header__wrapper">
     <div class="header__container">
-      <img class="header__logo" src="./img/logo.png" alt="">
+      <picture class="header__logo">
+        <source media="(min-width: 1280px)" srcset="./img/logo-dt@3x.png">
+        <img src="./img/logo-mb@3x.png" alt="">
+      </picture>
 
       {% import "data/data.njk" as data %}
 
@@ -13,7 +16,6 @@
         {% endfor %}
       </ul>
     </div>
-    <p class="text">ПАТ «Компанія «РАЙЗ» та ТОВ «Український дистриб’юційний центр», учасники групи компаній аграрного холдингу UkrLandFarming PLC - національні українські дистриб’ютори насіння, засобів захисту рослин, мінеральних та спеціальних добрив, сільськогосподарської техніки та запасних частин проводять реалізацію та розпродаж частини складських залишків за зниженим валютними курсами, надаючи супер дешеву ціну для фермерів та аграрних господарств.
-    </p>
+    <p class="text">ТОВ «Агро НВ», учасник групи компаній аграрного холдингу UkrLandFarming PLC - національний український дистриб’ютор насіння, засобів захисту рослин, мінеральних та спеціальних добрив, сільськогосподарської техніки та запасних частин проводить реалізацію та розпродаж частини складських залишків за зниженими валютними курсами, надаючи супер дешеву ціну для фермерів та аграрних господарств. </p>
   </div>
 </header>
