--- a/src/templates/layouts/_layout.njk
+++ b/src/templates/layouts/_layout.njk
@@ -6,7 +6,7 @@
       {% if title %}
         {{ title }}
       {% else %}
-        РАЙЗ
+        ULF
       {% endif %}
     </title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
